[package]
name = "rust_practise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum-server = { version = "*" }
# axum = "*"
error-stack = "0.3.1"
# thiserror = "1.0.40"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
# time = { version = "0.3.21" }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
async-trait = "*"
# futures = "*"
nom = "*"
euclid = { git = "https://github.com/juspay/hyperswitch", rev = "c7bb9ccda3ce307ffba29072b28bdea0a0eaa7f5", features = ["ast_parser", "valued_jit"] }
common_enums = { git = "https://github.com/juspay/hyperswitch", rev = "c7bb9ccda3ce307ffba29072b28bdea0a0eaa7f5" }
common_utils = { git = "https://github.com/juspay/hyperswitch", rev = "c7bb9ccda3ce307ffba29072b28bdea0a0eaa7f5" }
rand = "*"
rand_chacha = "*"
